fix: don't need edge spacing

--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -5,8 +5,8 @@
 	@apply bg-black bg-opacity-80 py-30 float-left w-full;
 
 	@screen tablet-landscape {
-		padding-left: calc( ( 100% - theme( 'screens.desktop' ) ) / 2 + 16px );
-		padding-right: calc( ( 100% - theme( 'screens.desktop' ) ) / 2 + 16px );
+		padding-left: calc( ( 100% - theme( 'screens.desktop' ) ) / 2 );
+		padding-right: calc( ( 100% - theme( 'screens.desktop' ) ) / 2 );
 	}
 
 	.footer-navigation .menu {
