--- a/src/scss/templates/_posts.scss
+++ b/src/scss/templates/_posts.scss
@@ -51,3 +51,13 @@
 		@apply hidden;
 	}
 }
+
+//--------------------------------------------------------------
+// Post Archives
+//--------------------------------------------------------------
+.archive,
+.blog {
+	.post-container {
+		@apply container px-0;
+	}
+}
