--- a/src/scss/templates/_widget.scss
+++ b/src/scss/templates/_widget.scss
@@ -9,7 +9,7 @@
 		@apply container clear-both mx-auto;
 
 		.widget {
-			@apply float-left px-0 py-32;
+			@apply float-left py-32;
 		}
 
 		&.widget-halves .widget:nth-child( odd ),
@@ -35,10 +35,6 @@
 		}
 
 		@screen tablet-landscape {
-			.widget {
-				@apply px-16;
-			}
-
 			&.widget-full .widget,
 			&.widget-halves.uneven .widget:last-of-type {
 				@apply float-none w-full;
